--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dragón Dorado - 金泰源</title>
   <style>
+  .fondo-menu {
+   position: absolute;
+   top: 220px; /* empieza justo debajo del menú */
+   left: 0;
+   width: 100%;
+   height: 200px; /* altura del fondo, ajusta a tu gusto */
+   background-image: url('Fondo.png'); /* reemplaza con tu archivo */
+   background-size: cover; /* ajusta la imagen al div */
+   background-position: center;
+   z-index: -1; /* para que esté detrás del menú y textos */
+}
+
     body {
       margin: 0;
       background-color: #000;
@@ -94,3 +106,4 @@
   </nav>
 </body>
 </html>
+
