--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
       <li><a href="#">GALERÍA</a></li>
     </ul>
   </nav>
+   <!-- DIV con la imagen de fondo -->
+  <div class="fondo-menu"></div>
 </body>
 </html>
+
 
