--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       margin: 0;
       background-color: #000;
       height: 100vh;
-      overflow: hidden;
+      overflow: visible;
       font-family: "MS Gothic", monospace;
     }
 
@@ -108,5 +108,6 @@
   <div class="fondo-menu"></div>
 </body>
 </html>
+
 
 
