--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     body {
       margin: 0;
-      background-color: #000;
+      background-color: #fff; /* fondo blanco */
       height: 100vh;
       overflow: visible;
       font-family: "MS Gothic", monospace;
@@ -108,6 +108,7 @@
   <div class="fondo-menu"></div>
 </body>
 </html>
+
 
 
 
