--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       margin: 0;
       background-color: #fff; /* fondo blanco */
       height: 100vh;
-      overflow: visible;
+      overflow-x: hidden;
       font-family: "MS Gothic", monospace;
     }
 
@@ -108,6 +108,7 @@
   <div class="fondo-menu"></div>
 </body>
 </html>
+
 
 
 
