--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
 </head>
 <body>
   <img src="Dragon.png" alt="Dragón dorado">
+  <div class="franja-negra"></div>
   <div class="texto-chino">金 泰 源</div>
   <div class="texto-latino">JIN TAI YUAN</div>
 
@@ -108,6 +109,7 @@
   <div class="fondo-menu"></div>
 </body>
 </html>
+
 
 
 
