--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
     background-position: center;
     z-index: -1; /* para que esté detrás del menú y textos */
 }
+  .franja-negra {
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 230px; /* mismo alto que tu imagen, puedes ajustar */
+   background-color: #000; /* negro */
+   z-index: 0; /* detrás del texto, pero sobre el fondo blanco */
+}
 
     body {
       margin: 0;
@@ -109,6 +118,7 @@
   <div class="fondo-menu"></div>
 </body>
 </html>
+
 
 
 
