--- a/index.html
+++ b/index.html
@@ -5,26 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dragón Dorado - 金泰源</title>
   <style>
-  .fondo-menu {
-    position: absolute;
-    top: 220px; /* empieza justo debajo del menú */
-    left: 0;
-    width: 100%;
-    height: 500px; /* altura del fondo, ajusta a tu gusto */
-    background-image: url('Fondo.png'); /* reemplaza con tu archivo */
-    background-size: cover; /* ajusta la imagen al div */
-    background-position: center;
-    z-index: -1; /* para que esté detrás del menú y textos */
-}
-  .franja-negra {
-   position: absolute;
-   top: 0;
-   left: 0;
-   width: 100%;
-   height: 230px; /* mismo alto que tu imagen, puedes ajustar */
-   background-color: #000; /* negro */
-   z-index: 0; /* detrás del texto, pero sobre el fondo blanco */
-}
+    /* Fondo debajo del menú */
+    .fondo-menu {
+      position: absolute;
+      top: 220px;
+      left: 0;
+      width: 100%;
+      height: 500px;
+      background-image: url('Fondo.png');
+      background-size: cover;
+      background-position: center;
+      z-index: -2;
+    }
+
+    /* Franja negra detrás del texto chino */
+    .franja-negra {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 230px; /* alto igual o un poco más que la imagen */
+      background-color: rgba(0, 0, 0, 0.9); /* negro sólido con leve transparencia */
+      z-index: -1; /* detrás del texto y la imagen */
+    }
 
     body {
       margin: 0;
@@ -40,8 +43,10 @@
       left: 0;
       max-width: 200px;
       height: auto;
-      transform: translateY(30px); /* mueve la imagen 50px hacia abajo */
+      transform: translateY(30px); /* baja un poco la imagen */
+      z-index: 0; /* encima de la franja */
     }
+
     .texto-chino {
       position: absolute;
       top: 40px;
@@ -49,25 +54,28 @@
       font-size: 64px;
       font-weight: bold;
       color: gold;
-      -webkit-text-stroke: 1px red; /* borde delgado rojo */
+      -webkit-text-stroke: 1px red;
       text-stroke: 1px red;
+      z-index: 1;
     }
 
     .texto-latino {
       position: absolute;
-      top: 120px; /* justo debajo del texto chino */
+      top: 120px;
       left: 100px;
       font-size: 36px;
       font-family: "Bradley Hand ITC", "Comic Sans MS", cursive;
       color: red;
       letter-spacing: 4px;
+      z-index: 1;
     }
 
     /* Estilo del menú */
     nav {
       position: absolute;
-      top: 180px; /* debajo del texto latino */
+      top: 180px;
       right: 30px;
+      z-index: 1;
     }
 
     nav ul {
@@ -75,8 +83,8 @@
       margin: 0;
       padding: 0;
       display: flex;
-      gap: 30px; /* espacio entre los elementos del menú */
-      justify-content: flex-end; /* alineación hacia la derecha */
+      gap: 30px;
+      justify-content: flex-end;
     }
 
     nav ul li {
@@ -91,19 +99,16 @@
     }
 
     nav ul li a:hover {
-      color: gold; /* cambio de color al pasar el mouse */
+      color: gold;
     }
   </style>
 </head>
 <body>
-  <img src="Dragon.png" alt="Dragón dorado">
   <div class="franja-negra"></div>
+  <img src="Dragon.png" alt="Dragón dorado">
   <div class="texto-chino">金 泰 源</div>
   <div class="texto-latino">JIN TAI YUAN</div>
 
-  <!-- Línea invisible sobre el menú -->
-  <div class="linea-menu"></div>
- 
   <!-- Menú horizontal debajo del texto latino -->
   <nav>
     <ul>
@@ -114,18 +119,8 @@
       <li><a href="#">GALERÍA</a></li>
     </ul>
   </nav>
-   <!-- DIV con la imagen de fondo -->
+
+  <!-- Fondo decorativo debajo del menú -->
   <div class="fondo-menu"></div>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
