--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dragón Dorado - 金泰源</title>
   <style>
-    /* Fondo debajo del menú */
+    /* Fondo principal bajo el menú */
     .fondo-menu {
       position: absolute;
       top: 220px;
@@ -15,7 +15,8 @@
       background-image: url('Fondo.png');
       background-size: cover;
       background-position: center;
-      z-index: -2;
+      opacity: 0.8; /* leve atenuación */
+      z-index: -1;
     }
 
     /* Franja negra detrás del texto chino */
@@ -24,29 +25,31 @@
       top: 0;
       left: 0;
       width: 100%;
-      height: 230px; /* alto igual o un poco más que la imagen */
-      background-color: rgba(0, 0, 0, 0.9); /* negro sólido con leve transparencia */
-      z-index: -1; /* detrás del texto y la imagen */
+      height: 230px;
+      background-color: #000;
+      z-index: 0;
     }
 
     body {
       margin: 0;
-      background-color: #fff; /* fondo blanco */
+      background-color: #fff;
       height: 100vh;
       overflow-x: hidden;
       font-family: "MS Gothic", monospace;
     }
 
+    /* Imagen del dragón */
     img {
       position: absolute;
       top: 0;
       left: 0;
       max-width: 200px;
       height: auto;
-      transform: translateY(30px); /* baja un poco la imagen */
-      z-index: 0; /* encima de la franja */
+      transform: translateY(30px);
+      z-index: 2; /* Asegura que esté sobre la franja negra */
     }
 
+    /* Texto en chino */
     .texto-chino {
       position: absolute;
       top: 40px;
@@ -56,9 +59,10 @@
       color: gold;
       -webkit-text-stroke: 1px red;
       text-stroke: 1px red;
-      z-index: 1;
+      z-index: 3; /* Sobre la franja */
     }
 
+    /* Texto latino */
     .texto-latino {
       position: absolute;
       top: 120px;
@@ -67,7 +71,7 @@
       font-family: "Bradley Hand ITC", "Comic Sans MS", cursive;
       color: red;
       letter-spacing: 4px;
-      z-index: 1;
+      z-index: 3;
     }
 
     /* Estilo del menú */
@@ -75,7 +79,7 @@
       position: absolute;
       top: 180px;
       right: 30px;
-      z-index: 1;
+      z-index: 3;
     }
 
     nav ul {
@@ -109,7 +113,6 @@
   <div class="texto-chino">金 泰 源</div>
   <div class="texto-latino">JIN TAI YUAN</div>
 
-  <!-- Menú horizontal debajo del texto latino -->
   <nav>
     <ul>
       <li><a href="#">INICIO</a></li>
@@ -120,7 +123,8 @@
     </ul>
   </nav>
 
-  <!-- Fondo decorativo debajo del menú -->
   <div class="fondo-menu"></div>
 </body>
 </html>
+
+
