--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
     }
 
     /* Franja negra detrás del texto chino */
-    .franja-negra {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 230px;
-      background-color: #000;
-      z-index: 0;
-    }
+  .franja-negra {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 230px;
+    background-color: #000000; /* negro absoluto */
+    z-index: 0;
+  }
 
     body {
       margin: 0;
@@ -126,5 +126,6 @@
   <div class="fondo-menu"></div>
 </body>
 </html>
+
 
 
