--- a/index.html
+++ b/index.html
@@ -5,51 +5,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dragón Dorado - 金泰源</title>
   <style>
-    /* Fondo principal bajo el menú */
-    .fondo-menu {
+    .franja-negra {
       position: absolute;
-      top: 220px;
+      top: 0;
       left: 0;
       width: 100%;
-      height: 500px;
-      background-image: url('Fondo.png');
-      background-size: cover;
-      background-position: center;
-      opacity: 0.8; /* leve atenuación */
-      z-index: -1;
+      height: 230px; /* mismo alto que la imagen */
+      background-color: #000000; /* negro absoluto */
+      z-index: 0;
     }
-
-    /* Franja negra detrás del texto chino */
-  .franja-negra {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 230px;
-    background-color: #000000; /* negro absoluto */
-    z-index: 0;
-  }
 
     body {
       margin: 0;
-      background-color: #fff;
+      background-color: #fff; /* fondo blanco */
       height: 100vh;
       overflow-x: hidden;
       font-family: "MS Gothic", monospace;
     }
 
-    /* Imagen del dragón */
     img {
       position: absolute;
       top: 0;
       left: 0;
       max-width: 200px;
       height: auto;
-      transform: translateY(30px);
-      z-index: 2; /* Asegura que esté sobre la franja negra */
+      transform: translateY(30px); /* mueve la imagen hacia abajo */
+      z-index: 1;
     }
 
-    /* Texto en chino */
     .texto-chino {
       position: absolute;
       top: 40px;
@@ -59,10 +42,9 @@
       color: gold;
       -webkit-text-stroke: 1px red;
       text-stroke: 1px red;
-      z-index: 3; /* Sobre la franja */
+      z-index: 2;
     }
 
-    /* Texto latino */
     .texto-latino {
       position: absolute;
       top: 120px;
@@ -71,15 +53,14 @@
       font-family: "Bradley Hand ITC", "Comic Sans MS", cursive;
       color: red;
       letter-spacing: 4px;
-      z-index: 3;
+      z-index: 2;
     }
 
-    /* Estilo del menú */
     nav {
       position: absolute;
       top: 180px;
       right: 30px;
-      z-index: 3;
+      z-index: 2;
     }
 
     nav ul {
@@ -122,10 +103,5 @@
       <li><a href="#">GALERÍA</a></li>
     </ul>
   </nav>
-
-  <div class="fondo-menu"></div>
 </body>
 </html>
-
-
-
