--- a/index.html
+++ b/index.html
@@ -1,107 +1,85 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dragón Dorado - 金泰源</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Empresa de Minerales</title>
   <style>
-    .franja-negra {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 230px; /* mismo alto que la imagen */
-      background-color: #000000; /* negro absoluto */
-      z-index: 0;
-    }
-
     body {
       margin: 0;
-      background-color: #fff; /* fondo blanco */
-      height: 100vh;
-      overflow-x: hidden;
-      font-family: "MS Gothic", monospace;
+      font-family: Arial, sans-serif;
+      background-color: #ffffff;
+      color: #333;
     }
-
-    img {
-      position: absolute;
-      top: 0;
-      left: 0;
-      max-width: 200px;
-      height: auto;
-      transform: translateY(30px); /* mueve la imagen hacia abajo */
-      z-index: 1;
-    }
-
-    .texto-chino {
-      position: absolute;
-      top: 40px;
-      left: 200px;
-      font-size: 64px;
+    header {
+      background-color: #b87333; /* color cobre */
+      padding: 20px;
+      text-align: center;
+      color: #fff;
+      font-size: 24px;
       font-weight: bold;
-      color: gold;
-      -webkit-text-stroke: 1px red;
-      text-stroke: 1px red;
-      z-index: 2;
+      letter-spacing: 1px;
     }
-
-    .texto-latino {
-      position: absolute;
-      top: 120px;
-      left: 100px;
-      font-size: 36px;
-      font-family: "Bradley Hand ITC", "Comic Sans MS", cursive;
-      color: red;
-      letter-spacing: 4px;
-      z-index: 2;
+    .container {
+      max-width: 1100px;
+      margin: auto;
+      padding: 20px;
     }
-
-    nav {
-      position: absolute;
-      top: 180px;
-      right: 30px;
-      z-index: 2;
+    h2 {
+      color: #b87333;
+      border-left: 6px solid #b87333;
+      padding-left: 10px;
     }
-
-    nav ul {
-      list-style: none;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      gap: 30px;
-      justify-content: flex-end;
+    .card {
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      padding: 20px;
+      margin: 15px 0;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     }
-
-    nav ul li {
-      font-family: "Mongolian Baiti", serif;
-      font-size: 12px;
-    }
-
-    nav ul li a {
-      color: red;
-      text-decoration: none;
-      transition: color 0.3s;
-    }
-
-    nav ul li a:hover {
-      color: gold;
+    footer {
+      background-color: #f2f2f2;
+      padding: 15px;
+      text-align: center;
+      font-size: 14px;
+      color: #555;
+      margin-top: 40px;
     }
   </style>
 </head>
 <body>
-  <div class="franja-negra"></div>
-  <img src="Dragon.png" alt="Dragón dorado">
-  <div class="texto-chino">金 泰 源</div>
-  <div class="texto-latino">JIN TAI YUAN</div>
+  <header>Nombre de la Empresa</header>
 
-  <nav>
-    <ul>
-      <li><a href="#">INICIO</a></li>
-      <li><a href="#">SERVICIOS</a></li>
-      <li><a href="#">¿QUIENES SOMOS?</a></li>
-      <li><a href="#">CONTACTO</a></li>
-      <li><a href="#">GALERÍA</a></li>
-    </ul>
-  </nav>
+  <div class="container">
+    <h2>Quiénes Somos</h2>
+    <div class="card">
+      <p>
+        Somos una empresa dedicada a la compra de minerales como oro y cobre
+        provenientes de pequeña minería y pirquineros, garantizando un proceso
+        transparente, seguro y profesional.
+      </p>
+    </div>
+
+    <h2>Servicios</h2>
+    <div class="card">
+      <ul>
+        <li>Compra directa de minerales</li>
+        <li>Asesoría técnica para pequeños productores</li>
+        <li>Evaluación y clasificación de mineral</li>
+        <li>Pagos rápidos y justos</li>
+      </ul>
+    </div>
+
+    <h2>Contacto</h2>
+    <div class="card">
+      <p>
+        WhatsApp: +56 9 1234 5678<br>
+        Dirección: Santiago, Chile<br>
+        Correo: contacto@empresa.cl
+      </p>
+    </div>
+  </div>
+
+  <footer>&copy; 2025 - Empresa de Minerales. Todos los derechos reservados.</footer>
 </body>
 </html>
