--- a/index.html
+++ b/index.html
@@ -1,85 +1,268 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Empresa de Minerales</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #ffffff;
-      color: #333;
-    }
-    header {
-      background-color: #b87333; /* color cobre */
-      padding: 20px;
-      text-align: center;
-      color: #fff;
-      font-size: 24px;
-      font-weight: bold;
-      letter-spacing: 1px;
-    }
-    .container {
-      max-width: 1100px;
-      margin: auto;
-      padding: 20px;
-    }
-    h2 {
-      color: #b87333;
-      border-left: 6px solid #b87333;
-      padding-left: 10px;
-    }
-    .card {
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      padding: 20px;
-      margin: 15px 0;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-    }
-    footer {
-      background-color: #f2f2f2;
-      padding: 15px;
-      text-align: center;
-      font-size: 14px;
-      color: #555;
-      margin-top: 40px;
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>JIN-TAI-YUAN</title>
+
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+
+<style>
+*{
+margin:0;
+padding:0;
+box-sizing:border-box;
+font-family:'Poppins',sans-serif;
+}
+
+body{
+background:#f5f5f5;
+color:#333;
+}
+
+/* ===== NAVBAR ===== */
+
+.navbar{
+position:fixed;
+top:0;
+width:100%;
+background:#111;
+color:white;
+padding:15px 25px;
+display:flex;
+justify-content:space-between;
+align-items:center;
+z-index:1000;
+}
+
+.logo{
+font-weight:600;
+font-size:20px;
+letter-spacing:2px;
+}
+
+.menu{
+display:flex;
+gap:25px;
+}
+
+.menu a{
+color:white;
+text-decoration:none;
+font-weight:400;
+transition:0.3s;
+}
+
+.menu a:hover{
+color:#caa85c;
+}
+
+/* ===== HAMBURGER ===== */
+
+.hamburger{
+display:none;
+flex-direction:column;
+cursor:pointer;
+gap:5px;
+}
+
+.hamburger div{
+width:25px;
+height:3px;
+background:white;
+}
+
+/* ===== MOBILE MENU ===== */
+
+.mobile-menu{
+display:none;
+flex-direction:column;
+background:#111;
+position:absolute;
+top:60px;
+left:0;
+width:100%;
+padding:15px;
+}
+
+.mobile-menu a{
+color:white;
+text-decoration:none;
+padding:10px 0;
+border-bottom:1px solid rgba(255,255,255,0.1);
+}
+
+/* ===== HERO ===== */
+
+.hero{
+height:100vh;
+background:url("Fondo.jpeg") center/cover no-repeat;
+display:flex;
+align-items:center;
+justify-content:center;
+text-align:center;
+color:white;
+position:relative;
+}
+
+.hero::before{
+content:"";
+position:absolute;
+top:0;
+left:0;
+width:100%;
+height:100%;
+background:rgba(0,0,0,0.5);
+}
+
+.hero-content{
+position:relative;
+z-index:2;
+}
+
+.hero h1{
+font-size:48px;
+letter-spacing:4px;
+}
+
+.hero p{
+margin-top:15px;
+font-size:18px;
+}
+
+/* ===== FOOTER ===== */
+
+footer{
+background:#111;
+color:#ccc;
+padding:40px 20px;
+text-align:center;
+}
+
+footer h3{
+color:white;
+margin-bottom:15px;
+}
+
+.footer-grid{
+display:grid;
+grid-template-columns:repeat(auto-fit,minmax(200px,1fr));
+gap:30px;
+max-width:1000px;
+margin:auto;
+margin-bottom:30px;
+}
+
+footer a{
+color:#ccc;
+text-decoration:none;
+display:block;
+margin:5px 0;
+}
+
+footer a:hover{
+color:#caa85c;
+}
+
+/* ===== RESPONSIVE ===== */
+
+@media(max-width:768px){
+
+.menu{
+display:none;
+}
+
+.hamburger{
+display:flex;
+}
+
+.mobile-menu.active{
+display:flex;
+}
+
+.hero h1{
+font-size:32px;
+}
+
+}
+
+</style>
 </head>
+
 <body>
-  <header>Nombre de la Empresa</header>
 
-  <div class="container">
-    <h2>Quiénes Somos</h2>
-    <div class="card">
-      <p>
-        Somos una empresa dedicada a la compra de minerales como oro y cobre
-        provenientes de pequeña minería y pirquineros, garantizando un proceso
-        transparente, seguro y profesional.
-      </p>
-    </div>
+<div class="navbar">
+<div class="logo">JIN-TAI-YUAN</div>
 
-    <h2>Servicios</h2>
-    <div class="card">
-      <ul>
-        <li>Compra directa de minerales</li>
-        <li>Asesoría técnica para pequeños productores</li>
-        <li>Evaluación y clasificación de mineral</li>
-        <li>Pagos rápidos y justos</li>
-      </ul>
-    </div>
+<div class="menu">
+<a href="#">Inicio</a>
+<a href="#">Productos</a>
+<a href="#">Servicios</a>
+<a href="#">Contacto</a>
+</div>
 
-    <h2>Contacto</h2>
-    <div class="card">
-      <p>
-        WhatsApp: +56 9 1234 5678<br>
-        Dirección: Santiago, Chile<br>
-        Correo: contacto@empresa.cl
-      </p>
-    </div>
-  </div>
+<div class="hamburger" onclick="toggleMenu()">
+<div></div>
+<div></div>
+<div></div>
+</div>
+</div>
 
-  <footer>&copy; 2025 - Empresa de Minerales. Todos los derechos reservados.</footer>
+<div class="mobile-menu" id="mobileMenu">
+<a href="#" onclick="closeMenu()">Inicio</a>
+<a href="#" onclick="closeMenu()">Productos</a>
+<a href="#" onclick="closeMenu()">Servicios</a>
+<a href="#" onclick="closeMenu()">Contacto</a>
+</div>
+
+<section class="hero">
+<div class="hero-content">
+<h1>JIN-TAI-YUAN</h1>
+<p>Excelencia · Tradición · Innovación</p>
+</div>
+</section>
+
+<footer>
+<div class="footer-grid">
+
+<div>
+<h3>JIN-TAI-YUAN</h3>
+<p>Compromiso con la calidad y la excelencia en cada proyecto.</p>
+</div>
+
+<div>
+<h3>Navegación</h3>
+<a href="#">Inicio</a>
+<a href="#">Productos</a>
+<a href="#">Servicios</a>
+<a href="#">Contacto</a>
+</div>
+
+<div>
+<h3>Contacto</h3>
+<p>Email: contacto@jintaiyuan.cl</p>
+<p>Teléfono: +56 9 0000 0000</p>
+<p>Chile</p>
+</div>
+
+</div>
+
+<p style="border-top:1px solid #333;padding-top:15px;">
+© 2026 JIN-TAI-YUAN. Todos los derechos reservados.
+</p>
+</footer>
+
+<script>
+
+function toggleMenu(){
+document.getElementById("mobileMenu").classList.toggle("active");
+}
+
+function closeMenu(){
+document.getElementById("mobileMenu").classList.remove("active");
+}
+
+</script>
+
 </body>
 </html>
