--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ border-bottom:1px solid rgba(255,255,255,0.1);
 
 .hero{
 height:100vh;
-background:url("Fondo.jpeg") center/cover no-repeat;
+background:url("fondo.jpeg") center/cover no-repeat;
 display:flex;
 align-items:center;
 justify-content:center;
@@ -266,3 +266,4 @@ document.getElementById("mobileMenu").classList.remove("active");
 
 </body>
 </html>
+
