--- a/index.html
+++ b/index.html
@@ -256,6 +256,8 @@ refinerías y plantas de procesamiento en Asia.
   <div class="container">
     © 2026 Comercial JIN-TAI-YUAN SpA.
     <p>All rights reserved</p>
+    <p>Contacto: Jorge Eyraud</p>
+    <p>Cel: +569 98563601</p>  
     <p>This site has been developed by</p>
     <p><strong>SIMA Ingeniería informática SpA.</strong></p>
   </div>
@@ -275,3 +277,4 @@ document.getElementById("mobileMenu").classList.remove("active");
 
 </body>
 </html>
+
